--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mercado Livre Brasil - Frete Grátis no mesmo dia</title>
   <link rel="icon" type="image/x-icon" href="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/5.21.22/mercadolibre/favicon.svg">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
   <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -48,11 +49,23 @@
   </header>
 
   <main>
-    <div class="main-banner">
-      <img src="assets/slide/slide1.webp" alt="">
+
+    <div class="glider-contain">
+      <div class="glider">
+        <div><img src="assets/slide/slide1.webp" alt=""></div>
+        <div><img src="assets/slide/slide2.webp" alt=""></div>
+        <div><img src="assets/slide/slide3.webp" alt=""></div>
+        <div><img src="assets/slide/slide4.webp" alt=""></div>
+        <div><img src="assets/slide/slide5.webp" alt=""></div>
+        <div><img src="assets/slide/slide6.webp" alt=""></div>
+        <div><img src="assets/slide/slide7.webp" alt=""></div>
+      </div>
+      <div role="tablist" class="dots"></div>
     </div>
   </main>
 
+  <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
+  <script src="./script/script.js" type="module"></script>
 </body>
 
 </html>
