Finalizado slides e descontos

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mercado Livre Brasil - Frete Grátis no mesmo dia</title>
+  <title>Descontaco abril no Mercado Livre Brasil</title>
   <link rel="icon" type="image/x-icon" href="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/5.21.22/mercadolibre/favicon.svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -50,18 +54,158 @@
 
   <main>
 
-    <div class="glider-contain">
-      <div class="glider">
-        <div><img src="assets/slide/slide1.webp" alt=""></div>
-        <div><img src="assets/slide/slide2.webp" alt=""></div>
-        <div><img src="assets/slide/slide3.webp" alt=""></div>
-        <div><img src="assets/slide/slide4.webp" alt=""></div>
-        <div><img src="assets/slide/slide5.webp" alt=""></div>
-        <div><img src="assets/slide/slide6.webp" alt=""></div>
-        <div><img src="assets/slide/slide7.webp" alt=""></div>
+    <div class="glider-container">
+      <div class="glider-contain">
+        <div class="glider">
+          <div><img src="assets/slide/slide1.webp" alt=""></div>
+          <div><img src="assets/slide/slide2.webp" alt=""></div>
+          <div><img src="assets/slide/slide3.webp" alt=""></div>
+          <div><img src="assets/slide/slide4.webp" alt=""></div>
+          <div><img src="assets/slide/slide5.webp" alt=""></div>
+          <div><img src="assets/slide/slide6.webp" alt=""></div>
+          <div><img src="assets/slide/slide7.webp" alt=""></div>
+        </div>
+        <div role="tablist" class="dots"></div>
       </div>
-      <div role="tablist" class="dots"></div>
+      <button class="glider-prev"></button>
+      <button class="glider-next"></button>
     </div>
+    <article class="descontos">
+      <h2 class="title">ARRASTE PRO LADO E APROVEITE AO MÁXIMO O DESCONTAÇO! 💛</h2>
+      <div class="descontos-flex">
+        <button class="descontos-prev"></button>
+        <div>
+          <a href="">
+            <img src="./assets/descontaco/desc1.webp" alt="">
+          </a>
+          <p>ATÉ 70% OFF</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc2.webp" alt="">
+          </a>
+          <p>DESCONTO COM PIX</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc3.webp" alt="">
+          </a>
+          <p>CUPOM DE DESCONTO</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc4.webp" alt="">
+          </a>
+          <p>ACHADOS ATÉ R$100</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc5.webp" alt="">
+          </a>
+          <p>MÍNIMO 50% OFF</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc6.webp" alt="">
+          </a>
+          <p>OS MAIS BUSCADOS</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/descontaco/desc7.webp" alt="">
+          </a>
+          <p>OFERTA COM FRETE GRÁTIS</p>
+        </div>
+        <div>
+          <a href="">
+            <img src="./assets/descontaco/desc8.webp" alt="">
+          </a>
+          <p>EXCLUSIVO MERCADO LIVRE</p>
+        </div>
+        <button class="descontos-next"></button>
+      </div>
+    </article>
+
+    <article class="comprar-menu container">
+      <h2 class="title">PRA COMPRAR AGORA 🟡</h2>
+      <div class="comprar-grid">
+        <div>
+          <a href=""><img src="assets/products/notebook1.webp" alt=""></a>
+          <div class="comprar-itens">
+            <span class="comprar-old">R$ 4.199</span>
+            <div>
+              <span>R$ 2.981</span>
+              <sup>29<!-- -->% OFF </sup>
+            </div>
+            <span>10x R$ 298 <sup>13</sup> sem juros</span>
+            <div>
+              <span>Frete grátis</span>
+              <img src="assets/icons/raio.svg" alt="">
+            </div>
+            <h3>Notebook A315-58-573p I5 8gb 256gb Ssd 15,6'' Cinza Acer</h3>
+          </div>
+        </div>
+        <div>
+          <a href=""><img src="assets/products/camera.webp" alt=""></a>
+          <div class="comprar-itens">
+            <span class="comprar-old">R$ 276</span>
+            <div>
+              <span>R$ 199 <sup>26</sup></span>
+              <sup>28<!-- -->% OFF </sup>
+            </div>
+            <div>
+              <span>Frete grátis</span>
+              <img src="assets/icons/raio.svg" alt="">
+            </div>
+            <h3>Câmera Externa Ip Prova D'água Infravermelho Externa Wifi Hd</h3>
+          </div>
+        </div>
+        <div>
+          <a href=""><img src="assets/products/creatina.webp" alt=""></a>
+          <div class="comprar-itens">
+            <span class="comprar-old">R$ 77</span>
+            <div>
+              <span>R$ 62 <sup>39</sup></span>
+              <sup>20<!-- -->% OFF </sup>
+            </div>
+            <div>
+              <img src="assets/icons/raio.svg" alt="">
+            </div>
+            <h3>Suplemento em pó Black Skull Creatine Turbo creatina Creatine Turbo em pote de 300g</h3>
+          </div>
+        </div>
+        <div>
+          <a href=""><img src="assets/products/cueca.webp" alt=""></a>
+          <div class="comprar-itens">
+            <span class="comprar-old">R$ 199</span>
+            <div>
+              <span>R$ 129 <sup>90</sup></span>
+              <sup>35<!-- -->% OFF </sup>
+            </div>
+            <div>
+              <span>Frete grátis</span>
+              <img src="assets/icons/raio.svg" alt="">
+            </div>
+            <h3>Kit 12 Cuecas Masculinas Boxer Microfibra Polo Wear</h3>
+          </div>
+        </div>
+        <div>
+          <a href=""><img src="assets/products/notebook2.webp" alt=""></a>
+          <div class="comprar-itens">
+            <span class="comprar-old">R$ 2.699</span>
+            <div>
+              <span>R$ 2.489</span>
+              <sup>7<!-- -->% OFF </sup>
+            </div>
+            <span>10x R$ 248 <sup>90</sup> sem juros</span>
+            <div>
+              <span>Frete grátis</span>
+              <img src="assets/icons/raio.svg" alt="">
+            </div>
+            <h3>Notebook Acer Aspire 3 A315-58-38sd Ci3 4gb 256ssd 15.6 W11 Prateado</h3>
+          </div>
+        </div>
+      </div>
+    </article>
+
+    <div class="container">
+      <img src="assets/images/bannerBigBrother.webp" alt="">
+    </div>
+
   </main>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
