Finalização elementos HTML

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -541,9 +541,86 @@
       </div>
     </div>
 
+    <div class="container app">
+      <img src="assets/images/app.webp" alt="">
+      <div>
+        <h2>Baixe o App Mercado Livre gratuitamente</h2>
+        <p>Buscando ofertas exclusivas com envio grátis em até 24h? Baixe o app Mercado Livre e aproveite para fazer suas compras online com segurança! São diversas categorias de produtos com as melhores ofertas: eletrodomésticos, TV, geladeira, fogão, roupas, calçados, eletrônicos, celulares, pc gamer e muito mais. Além de todos esses produtos, você pode fazer suas compras de supermercado!</p>
+      </div>
+    </div>
 
+    <article class="descontos">
+      <h2 class="title">SIGA O MERCADO LIVRE NAS REDES SOCIAIS E CONFIRA DESCONTOS INCRÍVEIS 💛</h2>
+      <div class="descontos-flex">
+        <div>
+          <a href="">
+            <img src="./assets/categorias/slide5/img1.webp" alt="">
+          </a>
+          <p>LACTA</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/categorias/slide5/img2.webp" alt="">
+          </a>
+          <p>NIKE</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/categorias/slide5/img3.webp" alt="">
+          </a>
+          <p>APPLE</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/categorias/slide5/img4.webp" alt="">
+          </a>
+          <p>ADIDAS</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/categorias/slide5/img5.webp" alt="">
+          </a>
+          <p>SAMSUNG</p>
+        </div>
+        <div> <a href="">
+            <img src="./assets/categorias/slide5/img6.webp" alt="">
+          </a>
+          <p>O'BOTICÁRIO</p>
+        </div>
+      </div>
 
+      <section class="container faq">
+        <h2>Dúvidas frequentes do Descontaço Mercado Livre</h2>
+        <h3>O que é o Descontaço?</h3>
+        <p>Descontaço é o período de ofertas do Mercado Livre onde você encontra smartphones, roupas, tênis, eletrodomésticos e muito mais produtos com descontos incríveis!</p>
+        <h3>Quando acontece o Descontaço?</h3>
+        <p>A campanha tem duração de 03 à 16 de abril. Acompanhe nossas redes sociais e baixe o app do Mercado Livre pra acompanhar 🙂</p>
+        <h3>Quais são as formas de pagamento?</h3>
+        <p>Você pode realizar o pagamento das suas compras com boleto bancário, cartão de crédito, cartão de débito virtual, transferência bancária, pix, Mercado Crédito ou utilizar o saldo da sua conta do Mercado Pago.</p>
+        <h3>Qual o valor do frete?</h3>
+        <p>O frete grátis dependerá do preço, peso e distância do envio do pedido, conforme as condições e limitações da oferta de frete grátis, disponível em mercadolivre.com.br/l/fretegratis.</p>
+      </section>
+
+    </article>
+
+    <div class="cupom container">
+      <p>*CUPOM FLAMENGO20 limitado a 1 uso por CPF com R$ 20 de desconto, em compras a partir de R$ 199 válido até 09/04/2023 às 23h59 ou até atingir o limite de 500 cupons. Válido apenas para produtos selecionados.</p>
+      <p>**Frete grátis dependerá do preço, peso e distância do envio do pedido, conforme as condições e limitações da oferta de frete grátis, disponível em mercadolivre.com.br/l/fretegratis. ***Entrega em até 24 horas, válida para compras feitas nos dias úteis até as 14h, para as capitais de SP, RJ, MG, PR e RS na modalidade "Full". Consulte as condições em mercadolivre.com.br/l/envios-full. ****Envio mais Rápido do Brasil: Análise comparativa independente, baseada em cálculo da média dos prazos de entrega ofertados durante o período 26/08/2021 e 02/09/2021. ****Beba com moderação. Proibida a venda de bebidas alcoólicas para menores de idade, conforme lei nº 8069/90, art 81, inciso II (Estatuto da Criança e do Adolescente). ¹Comparado ao preço da tabela FIPE e em anúncios selecionados. O Mercado Livre não se responsabiliza pelos preços praticados pelos vendedores em seus anúncios.</p>
+    </div>
   </main>
+
+  <footer class="footer container">
+    <div class="footer-main">
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="">Trabalhe conosco</a></li>
+          <li><a href="">Termos e condições</a></li>
+          <li><a href="">Como cuidamos da sua privacidade</a></li>
+          <li><a href="">Acessibilidade</a></li>
+          <li><a href="">Contato</a></li>
+          <li><a href="">Informações sobre seguros</a></li>
+        </ul>
+      </nav>
+      <p>Copyright © 1999-2023 Ebazar.com.br LTDA.</p>
+      <p>CNPJ n.º 03.007.331/0001-41 / Av. das Nações Unidas, nº 3.003, Bonfim, Osasco/SP - CEP 06233-903 - empresa do grupo Mercado Livre.</p>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
   <script src="./script/script.js" type="module"></script>
