Inicio modo mobile

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       </div>
     </article>
 
-    <div class="container">
+    <div class="container banner-margin">
       <h2 class="title">VAI TER CUPOM NO DESCONTAÇO, SIM! 😱</h2>
       <img src="assets/images/bannerNike.webp" alt="" class="banner">
     </div>
@@ -477,7 +477,7 @@
       </div>
     </article>
 
-    <div class="container">
+    <div class="container banner-margin">
       <h2 class="title">OS MELHORES BENEFÍCIOS COM NÍVEL 6 DO MERCADO LIVRE ✨</h2>
       <img src="assets/images/bannerNivel6.webp" alt="" class="banner">
     </div>
@@ -532,7 +532,7 @@
       </div>
     </article>
 
-    <div class="container">
+    <div class="container last-banner">
       <h2 class="title">NO DESCONTAÇO DO MERCADO LIVRE VOCÊ APROVEITA MUITO!</h2>
       <div class="desconto-grid">
         <img src="./assets/images/desconto1.webp" alt="" class="banner">
