--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <div class="glider-container">
     <div class="glider-contain">
       <div class="glider">
+        <div><img alt=""></div>
         <div><img src="assets/slide/slide1.webp" alt=""></div>
         <div><img src="assets/slide/slide2.webp" alt=""></div>
         <div><img src="assets/slide/slide3.webp" alt=""></div>
@@ -260,7 +261,7 @@
       </div>
     </article>
 
-    <article class="comprar-menu container container-margin">
+    <article class="comprar-menu container">
       <h2 class="title">PRA COMPRAR AGORA 🟡</h2>
       <div class="comprar-grid">
         <div>
@@ -303,7 +304,7 @@
               <sup class="comprar-desconto">25<!-- -->% OFF </sup>
             </div>
             <span class="comprar-parcela">10x R$ 197 <sup>90</sup> sem juros</span>
-            <h3>Ar condicionado Springer Midea Xtreme Save split inverter frio 12000 BTU branco 220V 42AGVCB12M5|38AGVCB12M5</h3>
+            <h3>Ar condicionado Springer Midea Xtreme Save split inverter frio 12000 BTU branco 220V </h3>
           </div>
         </div>
         <div>
